# server/api/Controllers/CommandSenderController.cs
@@ -1,6 +1,7 @@
 ﻿using api.Controllers.MQTT;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Mvc;
+using static api.Controllers.MQTT.DeviceCommandSender;
 
 namespace api.Controllers;
 
@@ -9,5 +10,12 @@ namespace api.Controllers;
 [Authorize]
 public class CommandSenderController(DeviceCommandSender commandSender) : ControllerBase
 {
-    
+    public record BlinkCommandRequest(string DeviceId, LightCommands Command);
+
+    [HttpPost("Blink")]
+    public async Task<IActionResult> Blink([FromBody] BlinkCommandRequest request)
+    {
+        await commandSender.SendBlinkCommand(request.DeviceId, request.Command);
+        return Ok();
+    }
 }
